chat/deployments/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: chat
spec:
  selector:
    app: chat
  ports:
  - protocol: TCP
    port: 81
    targetPort: 8081
